--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div>
                Password Length :
               <input type="range" id="passwordlength" name="passwordlength"
-                     min="8" max="128">
+                     min="8" max="128" value="8">
                     <label id="PasswordLengthLabel" >8 Characters</label> 
 
                     <br>
