--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                Password Length :
               <input type="range" id="passwordlength" name="passwordlength"
                      min="8" max="128" value="8">
-                    <label id="PasswordLengthLabel" >8 Characters</label> 
-
+                     <input type="text" id="passwordLength" value="8" style="width:40px;">
+                     <label id="PasswordLengthLabel" >Characters</label> 
+                   
                     <br>
                     <b> Password options </b> <br>
                   
