fixed with invalid options

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
 <!--   
@@ -57,9 +57,9 @@
 
             <div>
                Password Length :
-              <input type="range" id="passwordlength" name="passwordlength"
+              <input type="range" id="passwordLengthRange" name="passwordlength"
                      min="8" max="128" value="8">
-                     <input type="text" id="passwordLength" value="8" style="width:40px;">
+                     <input type="text" id="passwordLengthTextBox" value="8" style="width:40px;">
                      <label id="PasswordLengthLabel" >Characters</label> 
                    
                     <br>
@@ -118,7 +118,7 @@
 
     
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
         <!-- jQuery & Bootstrap CDN -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
